Fixed schedule alignment on smaller displays

--- a/static/styles.css
+++ b/static/styles.css
@@ -55,6 +55,8 @@ html {
     position: absolute;
     top: 65px;
     left: 52px;
+    
+    width: calc(100vw - 102px);
 }
 
 .big-logo {
@@ -1043,9 +1045,11 @@ li:has(> .sidebar-selected) {
     background-color: rgba(230, 230, 230, 0.5);
 
     border-spacing: 10px;
-    margin-top: 10px;
+    margin-top: 40px;
 
     border-radius: 8px;
+
+    transform-origin: top left;
 }
 
 .week.dark-mode {
@@ -1094,6 +1098,12 @@ li:has(> .sidebar-selected) {
 
 .url-container {
     min-width: 40%;
+}
+
+.tutorstvo-arrows {
+    position: absolute;
+    right: 90px;
+    top: 0
 }
 
 @media only screen and (max-width: 600px) {
